--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
         "bootstrap": "4.3.1",
         "jquery": "^3.4.1",
         "jquery.easing": "^1.4.1",
-        "magnific-popup": "^1.1.0"
+        "magnific-popup": "^1.1.0",
+        "sass": "^1.89.0"
     },
     "devDependencies": {
         "autoprefixer": "^9.7.3",
